<resources>
    <string name="app_name">Tandur</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Hai, %1s!</string>
    <string name="tvLocation">Semampir, Kota Kediri</string>
    <string name="apa_yang_mereka_tanam">Apa yang Mereka Tanam?</string>
    <string name="icon_location">icon_location</string>
    <string name="tv_saran_untuk_anda">Saran Untuk Anda</string>
    <string name="hint_search">Cari tanaman di sini …</string>
    <string name="tanaman_saya">Tanaman Saya</string>
    <string name="cari_tanaman_anda_di_sini">Cari tanaman anda di sini …</string>
    <string name="menambah_tanaman">Menambah Tanaman</string>
    <string name="profil_saya">Profil Saya</string>
    <string name="email_in_profile">Email</string>
    <string name="btn_tanam">Tanam</string>
    <string name="icon_email_di_profile">icon email di profile</string>
    <string name="user_email_dummy">Ryan@gmail.com</string>
    <string name="icon_person_di_profile">icon person di profile</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="mr_ryan">Mr.Ryan</string>
    <string name="jumlah_tanaman_aktif">Jumlah Tanaman Aktif</string>
    <string name="dummy_jumlah_tanaman">20</string>
    <string name="tingkat_kepuasan_hasil_panen">Tingkat Kepuasan Hasil Panen</string>
    <string name="dummy_photos">Dummy Photos</string>
    <string name="padi">Padi</string>
    <string name="gambar_tanaman">Gambar Tanaman</string>
    <string name="icon_tanaman">icon Tanaman</string>
    <string name="icon_status">Icon Status</string>
    <string name="status_tanaman">Tanaman Sehat</string>
    <string name="icon_waktu">Icon Waktu</string>
    <string name="different_date_time">%1s Bulan Menuju Panen</string>
    <string name="icon_person">Icon Person</string>
    <string name="dummy_jumlah_user">20</string>
    <string name="tingkat_keberhasilan">90%</string>
    <string name="estimasi">%1s Bulan</string>
    <string name="nearby_farmer">%1s Petani</string>
    <string name="nearby_farmer_empty">Belum ada yang menanam %1s di sekitar anda</string>
    <string name="let_s_join_us">Mari Bertani!</string>
    <string name="register_jargon">Sekarang anda dapat menanam di manapun tanpa takut gagal panen lagi</string>
    <string name="tandur_logo">tandur logo</string>
    <string name="tandur_app">Tandur App</string>

    <!-- Edit Text Place Holder -->
    <string name="input_your_password_here">Masukkan password di sini …</string>
    <string name="input_your_email_here">Masukkan email di sini …</string>
    <string name="input_the_description_here">Masukkan deskripsi di sini …</string>
    <string name="input_your_name_here">Masukkan nama di sini …</string>

    <!-- Other -->
    <string name="email">Email</string>
    <string name="join_now">Bergabung Sekarang</string>
    <string name="sign_in">Masuk</string>
    <string name="form_could_not_be_empty">%1s form tidak boleh kosong</string>
    <string name="email_not_valid">Email tidak valid</string>
    <string name="email_duplicate">Tolong gunakan email lain</string>
    <string name="let_s_complete_the_form">Mari Lengkapi form di bawah!</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="password">Password</string>
    <string name="password_invalid">Minimal karakter pada password harus 6</string>
    <string name="sign_up">Daftar</string>
    <string name="back">Kembali</string>
    <string name="pass_the_credentials">Masuk dengan Email</string>
    <string name="welcome_user">Hai %1s</string>
    <string name="log_out">Keluar</string>
    <string name="icon_back">Icon Back</string>
    <string name="gambar_tanaman_yang_dipilih">Gambar Tanaman yang Dipilih</string>
    <string name="icon_status_tanamannya">Icon Status Tanamannya</string>
    <string name="informasi_terkait">Informasi Terkait</string>
    <string name="lokasi_anda">Lokasi Anda</string>
    <string name="click_untuk_pindah_lokasi">(Klik untuk pindah lokasi)</string>
    <string name="dummy_location_detail">Semampir, Kota Kediri, Indonesia</string>
    <string name="penanam_di_sekitar_anda">Penanam Di Sekitar Anda</string>
    <string name="jumlah_penanam_dummy">21</string>
    <string name="durasi_panen">Durasi Panen</string>
    <string name="saya_ingin_menanam_dummy">Saya Ingin Menanam Padi</string>
    <string name="icon_hujan">Icon Hujan</string>
    <string name="tinggi">Tinggi</string>
    <string name="icon_tempratu">Icon Tempratu</string>
    <string name="tempratur_suhu">Tempratur Suhu</string>
    <string name="rendah">Rendah</string>
    <string name="icon_soil">Icon Soil</string>
    <string name="status_peringatan">Status (1 Peringatan)</string>
    <string name="icon_date">Icon Date</string>
    <string name="waktu_menanam">Waktu Menanam</string>
    <string name="tv_date">02 April 2022</string>
    <string name="estimasi_panen">02 Juli 2022</string>
    <string name="dummy_location">Semampir, Kota Kediri, Indonesia</string>
    <string name="pilih_tanaman">Pilih Tanaman</string>
    <string name="back_icon">back icon</string>
    <string name="curah_hujan">Curah Hujan</string>
    <string name="condition_icon">condition icon</string>
    <string name="temperatur_suhu">Temperatur Suhu</string>
    <string name="ph_tanah">PH Tanah</string>
    <string name="klik_untuk_memilih_waktu_tanam">Klik untuk memilih waktu tanam</string>
    <string name="waktu_tanam">Waktu Tanam</string>
    <string name="estimated_harvest_time_message">Estimasi panen akan ditampilkan di sini</string>
    <string name="perkiraan_waktu_panen">Perkiraan Waktu Panen</string>
    <string name="lokasi_penanaman">Lokasi Penanaman</string>
    <string name="klik_untuk_memilih_lokasi">Klik untuk memilih lokasi</string>
    <string name="tingkat_keberhasilan_detail">90</string>
    <string name="tingkat_keberhasilan_detail_myplant">40</string>
    <string name="logout">Logout</string>
    <string name="kondisi_lingkungan_anda">Kondisi Lingkungan Anda</string>
    <string name="detail_bulan">Bulan 1</string>
    <string name="month">Bulan %1s</string>
    <string name="terdapat_peringatan">Terdapat Peringatan</string>
    <string name="icon_humidity">Icon Humidity</string>
    <string name="tingkat_hujan_detail">202</string>
    <string name="tingkat_humidity_detail">80</string>
    <string name="tingkat_tempratur_detail">28°C</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="simpan_lokasi">Simpan Lokasi</string>
    <string name="lokasi_saya">Lokasi Saya</string>
    <string name="pilih_lokasi_anda">Pilih Lokasi Anda</string>
    <string name="block_loading_background">block loading background</string>
    <string name="location_info">%1s, %2s</string>
    <string name="error_connecting_to_api">Terdapat kesalahan saat menghubungkan ke server</string>
    <string name="empty_my_plant">Daftar tanaman anda masih kosong</string>
    <string name="bagaimana_hasil_panen_kali_ini">Bagaimana Hasil Panen Kali ini?</string>
    <string name="sad_face_icon">sad face icon</string>
    <string name="kurang">Kurang</string>
    <string name="neutral_face_icon">neutral face icon</string>
    <string name="happy_face_icon">happy face icon</string>
    <string name="panen">Panen</string>
    <string name="puas">Puas</string>
    <string name="biasa">Biasa</string>
    <string name="click_to_get_your_location">Lokasi belum diatur</string>
    <string name="pilih_salah_satu_dari_tiga_pilihan_di_atas">Pilih salah satu dari tiga pilihan di atas</string>
    <string name="pilih_lokasi_saya">Pilih Lokasi Saya</string>
    <string name="location_predict_message">Kami akan memprediksi tanaman yang tepat untuk ditanam pada lokasi anda</string>
    <string name="hai_aplikasi_tandur_membutuhkan_lokasimu">Hai, aplikasi Tandur membutuhkan lokasimu</string>
    <string name="kembali">Kembali</string>
    <string name="dialog_geospatial_info_title">Bagaimana Kami Mendapatkan Data Kondisi Lingkungan Anda?</string>
    <string name="dialog_geospatial_info_message">Data didapatkan dengan mengambil rata-rata pada setiap bulan.</string>
    <string name="info_icon">info icon</string>

    <string name="harvest_duration">%1s Bulan</string>
    <string name="curah_hujan_dummy">212</string>
    <string name="suhu_udara">Suhu\nUdara</string>
    <string name="humiditas">Humiditas</string>
    <string name="bagaimana_cuaca_hari_ini">Bagaimana cuaca hari ini?</string>
    <string name="satisfaction_icon">satisfaction icon</string>
    <string name="tab_1">Ditanam</string>
    <string name="tab_2">Sudah Panen</string>
    <string name="please_wait">Harap tunggu …</string>
    <string name="sesuai">Sesuai</string>
    <string name="null_weather">--</string>
    <string name="plant_probability">%1s %%</string>

    <string name="search_not_found">Kata kunci tidak ditemukan</string>
</resources>