<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_marginHorizontal="30dp"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/tv_bulan"
        style="@style/Medium14Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detail_bulan"
        android:textColor="@color/red_accent"
        android:layout_marginEnd="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ic_rain"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_status_keseluruhan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/terdapat_peringatan"
        style="@style/Regular12Sp"
        android:textColor="@color/red_accent"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_bulan"
        app:layout_constraintEnd_toStartOf="@id/tv_hujan"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/ic_rain"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/ic_rain"
        app:tint="@color/red_accent"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@+id/tv_bulan"
        app:layout_constraintBottom_toBottomOf="@id/tv_bulan"
        app:layout_constraintEnd_toStartOf="@id/ic_temp"
        android:contentDescription="@string/icon_hujan" />

    <TextView
        android:id="@+id/tv_hujan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tingkat_hujan_detail"
        style="@style/Regular12Sp"
        android:textColor="@color/red_accent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/ic_rain"
        app:layout_constraintStart_toStartOf="@id/ic_rain"
        app:layout_constraintEnd_toEndOf="@id/ic_rain"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/ic_temp"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/ic_temperature"
        app:tint="@color/red_accent"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@+id/ic_rain"
        app:layout_constraintBottom_toBottomOf="@id/ic_rain"
        app:layout_constraintEnd_toStartOf="@id/ic_humidity"
        android:contentDescription="@string/icon_tempratu" />

    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tingkat_tempratur_detail"
        style="@style/Regular12Sp"
        android:textColor="@color/red_accent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/ic_temp"
        app:layout_constraintStart_toStartOf="@id/ic_temp"
        app:layout_constraintEnd_toEndOf="@id/ic_temp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/ic_humidity"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/ic_humidity"
        app:tint="@color/red_accent"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toTopOf="@+id/ic_temp"
        app:layout_constraintBottom_toBottomOf="@id/ic_temp"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/icon_humidity" />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tingkat_humidity_detail"
        style="@style/Regular12Sp"
        android:textColor="@color/red_accent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/ic_humidity"
        app:layout_constraintStart_toStartOf="@id/ic_humidity"
        app:layout_constraintEnd_toEndOf="@id/ic_humidity"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/v_line1"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_radius_8dp"
        android:backgroundTint="@color/light_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_keseluruhan"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>