<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardNearbyPlant"
    android:layout_width="match_parent"
    android:layout_height="177dp"
    android:layout_gravity="center"
    android:layout_marginHorizontal="30dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/bg_radius_8dp"
    android:backgroundTint="@color/green_accent"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_tanaman"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:contentDescription="@string/gambar_tanaman"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/padi_dummy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:background="@drawable/bg_radius_8dp_gradient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/llStatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ic_tanaman"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/tandur_logo"
                android:gravity="center"
                android:src="@drawable/ic_tanam" />

            <TextView
                android:id="@+id/tv_nama_tanaman"
                style="@style/Medium14Sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/padi"
                android:textColor="@color/light_primary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/ic_jumlah_user"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:contentDescription="@string/icon_person"
                android:src="@drawable/ic_person"
                app:tint="@color/light_primary" />

            <TextView
                android:id="@+id/tv_jumlah_user"
                style="@style/Regular12Sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/dummy_jumlah_user"
                android:textColor="@color/light_primary"
                app:layout_constraintBottom_toBottomOf="@id/ic_jumlah_user"
                app:layout_constraintStart_toEndOf="@id/ic_jumlah_user"
                app:layout_constraintTop_toTopOf="@id/ic_jumlah_user" />

            <ImageView
                android:id="@+id/ic_status"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/icon_status"
                android:src="@drawable/ic_happy"
                app:layout_constraintBottom_toBottomOf="@id/tv_jumlah_user"
                app:layout_constraintStart_toEndOf="@id/tv_jumlah_user"
                app:layout_constraintTop_toTopOf="@id/tv_jumlah_user" />

            <TextView
                android:id="@+id/tv_status"
                style="@style/Regular12Sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/tingkat_keberhasilan"
                android:textColor="@color/light_primary"
                app:layout_constraintBottom_toBottomOf="@id/ic_status"
                app:layout_constraintStart_toEndOf="@id/ic_status"
                app:layout_constraintTop_toTopOf="@id/ic_status" />

            <ImageView
                android:id="@+id/ic_waktu"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:contentDescription="@string/icon_waktu"
                android:src="@drawable/ic_time" />

            <TextView
                android:id="@+id/tv_waktu"
                style="@style/Regular12Sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/estimasi"
                android:textColor="@color/light_primary" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

